# data-factory-test-task

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-09-04-08-41-51_user_pay_cred_plan_dic_tabl.py  2025-09-04-09-25-57_user_pay_cred_plan_dic_tabl.py  2025-09-04-13-49-26_user_pay_cred_plan_dic_tabl.py  2025-09-05-12-48-11_user_pay_cred_plan_dic_tabl.py
config/: logging_config.py
core/: config.py  deps.py
data/: credits.csv  dictionary.csv  payments.csv  plans.csv  users.csv
db/: __init__.py  connection.py  credits.py  credits_model.py  dictionary.py  dictionary_model.py  payments.py  payments_model.py  plans.py  plans_model.py  users.py  users_model.py
loader/: data_loader.py
logs/config/: logging_config.py
repo/: plan_insert_repo.py  plan_repo.py  user_credits_repo.py
routers/: health_check_router.py  plan_insert_router.py  plan_performance_router.py  user_credits_rout.py  year_performance_router.py
schemas/: plan_performance_schema.py  user_credits_schema.py
services/: plan_insert_service.py  plan_performance_service.py  user_credits_service.py  user_serv.py  year_rerformance_servise.py
